Fix background on mobile.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  min-height: 100vh;
   background-image: url('./images/background.png');
   background-position: center;
   background-size: cover;
